# Nativo-NFT-auctions

./: .gitignore  Cargo.toml  build.sh  dev-deploy.sh  migrate.sh  migrate_me.sh  readme.md
neardev/: dev-account  dev-account.env
res/: nft_aucions.wasm
src/: dao.rs  enumeration.rs  events.rs  internal.rs  lib.rs  metadata.rs  migrate.rs
