[package]
name = "nft-aucions"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = {version = "4.0.0-pre.5", features = ["unstable"]}
near-contract-standards = "4.0.0-pre.5"
near-sys = "0.2.0"
uint = { version = "0.8.3", default-features = false }

[dependencies.serde_with]
version = "1.14.0"

[dev-dependencies]
near-sdk-sim = "4.0.0-pre.5"
near-sys = "0.2.0"
[profile.release]
codegen-units=1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true